test/test_suite/errors/expect_type.c3
fn void main()
{
	nontype v; // #error: Expected a type here
}
